--- a/composer.json
+++ b/composer.json
@@ -19,18 +19,15 @@
         "zendframework/zend-db": "^2.8.1",
         "zendframework/zend-mvc-form": "^1.0",
         "zendframework/zend-json": "^3.0",
+        "zendframework/zend-math": "^3.0",
         "zendframework/zend-log": "^2.9",
-        "zendframework/zend-psr7bridge": "^0.2.2",
-        "zendframework/zend-session": "^2.7.1"
+        "zendframework/zend-session": "^2.7.1",
+        "zendframework/zend-authentication": "^2.5"
     },
     "autoload": {
         "psr-4": {
-            "Application\\": "module/Application/src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "ApplicationTest\\": "module/Application/test/"
+            "Application\\": "module/Application/src/",
+            "User\\": "module/User/src/"
         }
     },
     "extra": [],
@@ -45,8 +42,5 @@
         ],
         "serve": "php -S 0.0.0.0:8080 -t public public/index.php",
         "test": "phpunit"
-    },
-    "require-dev": {
-        "zendframework/zend-test": "^3.0.1"
     }
 }
