--- a/config/development.config.php.dist
+++ b/config/development.config.php.dist
@@ -8,6 +8,10 @@
 return [
     // Additional modules to include when in development mode
     'modules' => [
+        'Zend\Session',
+        'Zend\Log',
+        'Zend\Form',
+        'Zend\Db',
     ],
     // Configuration overrides during development mode
     'module_listener_options' => [
